@@ -16,6 +16,7 @@ Release date: TBA
 
   Closes #578
 
+
 * Fix false negative for ``no-member`` when attempting to assign an instance
   attribute to itself without any prior assignment.
 
@@ -40,6 +41,12 @@ Release date: TBA
   the variable being raised.
 
   Closes #2793
+
+* Fixed false positive for ``unused-argument`` when a ``nonlocal`` name is used
+  in a nested function that is returned without being called by its parent.
+
+  Closes #5187
+
 
 What's New in Pylint 2.13.0?
 ============================
